--- a/myPT1/style.css
+++ b/myPT1/style.css
@@ -6,9 +6,20 @@ thead {
 }
 
 table {
-	font: alef;
+	font-family: sans-serif ;
 	font-size: 18px;
 	text-align: center;
 	width: 40%;
 }
 
+img {
+	position: relative;
+	max-width: 40%;
+}
+
+div p {
+	color: darkcyan;
+	font-size: 28px;
+	font-family: monospace;
+	font-style: italic;
+}
